# master-thesis

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: DOWNLOADS.md  SETUP.md
export_models/: demo.py  pyproject.toml  requirements.txt
notebooks/: evaluation.ipynb  prepare_data.ipynb  spec_mamba_test.ipynb
scripts/: convert_wav_to_spec.py  copy_data.py  copy_metadata.py  download_data.sh  download_repos.sh  export_models.sh  generate_splits.py  get_file_ids.py  install_cuda-12.4.sh  install_python-3.11.sh  setup_venv_ssm.sh  snellius_convert_wav_to_spec.sh  snellius_copy_data.sh  snellius_copy_metadata.sh  snellius_download_data.sh  snellius_run.sh
src/bi_mamba_ssm/: __init__.py
src/bi_mamba_ssm/models/: mixer_seq_simple.py
src/bi_mamba_ssm/modules/: mamba_simple.py
src/bi_mamba_ssm/ops/: selective_scan_interface.py
src/bi_mamba_ssm/ops/triton/: layernorm.py  selective_state_update.py
src/bi_mamba_ssm/utils/: generation.py
src/spec_mamba/: __init__.py
src/spec_mamba/data/: __init__.py  dataset.py  labels_map.py  metadata.py  processors.py  transforms.py  utils.py  wav_to_spec.py
src/spec_mamba/exp/: __init__.py  params.py  paths.py  run.py
src/spec_mamba/exp/cfg/: cfg_aum.py  cfg_aum_clf.py  cfg_aum_cont.py  cfg_aum_temp.py  cfg_aum_weather.py  cfg_cont_rec.py  cfg_ssast.py  cfg_ssast_clf.py  cfg_ssast_cont.py  (+3 more)
src/spec_mamba/models/: __init__.py
src/spec_mamba/training/: __init__.py  callbacks.py  checkpoint.py  losses.py
tests/: __init__.py  conftest.py  test_audio_mamba.py  test_common.py  test_cont.py  test_ssast.py
(+22 files in other folders)
