[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=70"]

[project]
name = "spec_mamba"
version = "1.0"
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/pk-470/master-thesis"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
